<resources>
    <string name="app_name">FST Go</string>
    <string name="title_activity_scholarship">Scholarships and Bursaries</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_quick_alerts">Alerts</string>
    <string name="title_activity_bus_routes">Bus Routes</string>
    <string name="action_settings">Settings</string>
    <string name="action_schol">Scholarships and Bursaries</string>
    <string name="title_activity_faq">FAQs</string>
    <string name="title_activity_player">VideoListActivity</string>
    <string name="no_description">No description</string>
    <string name="title_activity_videos">Videos</string>
    <string name="watch_externally">Watch on YouTube</string>
    <string name="api_key" translatable="false">AIzaSyDL2ZqeB3uGYmqv8jJgITwS4N9eFyBz4IA</string>
    <string name="channel_id" translatable="false">UCGH2o33wmSvi3iKHgvL-ybQ</string>
    <string name="required_fields">items(id/videoId,snippet/title,snippet/description,snippet/thumbnails/default/url)</string>
    <string name="activity_sas">Student Services</string>
    <string name="activity_registration">Registration</string>
    <string name="activity_records">Student Records</string>
    <string name="term_selector_label">Semester:</string>
    <string name="registration_sas">Registration</string>
    <string name="addcourse_label">Add New Courses</string>
        <string name="registration_description_sas">
            \u2022 Check your registration status \n
            \u2022 Add or drop classes \n
            \u2022 Display your class schedule
        </string>
        <string name="records_description_sas">
            \u2022 View your holds \n
            \u2022 Display your grades and transcripts \n
            \u2022 Review charges and payments
        </string>
    <string name="add_drop_label">Add Courses</string>
    <string name="timetable_label">View your schedule</string>
    <string name="transcript_label">View your transcript</string>
    <string name="courses_label">View your courses</string>
    <string name="override_label">Request Override</string>
    <string name="records_sas">Student Records</string>
    <string name="username_sas">ID Number e.g. 620012345</string>
    <string name="password_sas">Password</string>
    <string name="login_button_sas">Login</string>
    <string name="reset_sas">Forgot password</string>
    <string name="login_title_sas">Login to SAS</string>
    <string name="logout_menuitem_sas">Logout</string>
    <string name="remember_password_sas">Remember login</string>
    <string name="main_title_sas">Student Services</string>
    <string name="ug_transcript">Undergraduate Transcript</string>
    <string name="not_official">This is NOT an official transcript</string>
    <string name="institution_credit">Institution Credit</string>
    <string name="addcourses_description">
        Search for courses below to add
    </string>
    <string-array name="error_codes">
        <item>You may register during the following times</item>
        <item>You have no Registration Time Ticket</item>
    </string-array>
    <string name="login_get">https://sas.mona.uwi.edu/banndata1-srv_mona/twbkwbis.P_WWWLogin</string>
    <string name="login_post">https://sas.mona.uwi.edu/banndata1-srv_mona/twbkwbis.P_ValLogin</string>
    <string name="webstart_get">https://sas.mona.uwi.edu/banndata1-srv_mona/web.startpage</string>
    <string name="webagree_post">https://sas.mona.uwi.edu/banndata1-srv_mona/web.agree</string>
    <string name="fstletter_get">https://sas.mona.uwi.edu/banndata1-srv_mona/uwm_fst.letter</string>
    <string name="mainmenu_get">https://sas.mona.uwi.edu/banndata1-srv_mona/twbkwbis.P_GenMenu?name=bmenu.P_MainMnu</string>
    <string name="studentservices_get">https://sas.mona.uwi.edu/banndata1-srv_mona/twbkwbis.P_GenMenu?name=bmenu.P_StuMainMnu</string>
    <string name="registration_get">https://sas.mona.uwi.edu/banndata1-srv_mona/twbkwbis.P_GenMenu?name=bmenu.P_RegMnu</string>
    <string name="selectterm_get">https://sas.mona.uwi.edu/banndata1-srv_mona/bwskflib.P_SelDefTerm</string>
    <string name="selectterm_post">https://sas.mona.uwi.edu/banndata1-srv_mona/bwcklibs.P_StoreTerm</string>
    <string name="detailschedule_get">https://sas.mona.uwi.edu/banndata1-srv_mona/bwskfshd.P_CrseSchdDetl</string>
    <string name="coursesearch_post">https://sas.mona.uwi.edu/banndata1-srv_mona/bwckgens.P_RegsGetCrse</string>
    <string name="logout_get">https://sas.mona.uwi.edu/banndata1-srv_mona/twbkwbis.P_Logout</string>
    <string name="timetable_url">https://sas.mona.uwi.edu/banndata1-srv_mona/bwskfshd.P_CrseSchdDetl</string>
    <string name="get_terms_url">https://sas.mona.uwi.edu/banndata1-srv_mona/bwskflib.P_SelDefTerm</string>
    <string name="store_term_url">https://sas.mona.uwi.edu/banndata1-srv_mona/bwcklibs.P_StoreTerm</string>
    <string name="transcript_post">https://sas.mona.uwi.edu/banndata1-srv_mona/bwskotrn.P_ViewTran</string>
    <string name="play_services_not_installed">Google Play Services is not installed on this device</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiamFzb25oaW5kczEzIiwiYSI6ImNpcXZ2NWhhYzAwM2hmcW04cjMxMnFkYXMifQ.1jBTcb1cHOSSKx6uPpOWvQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_expandable_scholarship">ExpandableScholarshipActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="sas">SAS</string>
    <string name="sas_registration">View Timetable</string>
    <string name="sas_transcript">View Transcript</string>
    <string name="sas_logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="bus">Shuttle Bus</string>
    <string name="forgot_password">Can\'t log in?</string>
    <string name="toast_text_copied">Text copied</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_gallery_detail">GalleryDetailActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="bus_route_a">Campus to Liguanea \nvia Old Hope Rd</string>
    <string name="bus_route_a_title">A</string>
    <string name="bus_route_b">Campus to Liguanea \nvia Mona Rd</string>
    <string name="bus_route_b_title">B</string>
    <string name="bus_route_c">Campus to Papine</string>
    <string name="bus_route_c_title">C</string>
    <string name="bus_route_d">Campus to Mona Rehabilitation Centre</string>
    <string name="bus_route_d_title">D</string>
    <string name="bus_route_e">Campus to Surrounding Communities</string>
    <string name="bus_route_e_title">E</string>
    <string-array name="bus_route_a_stops">
        <item>Liguanea Post Office</item>
        <item>Richings Avenue</item>
        <item>Sandy Park Lane</item>
        <item>Bank of Nova Scotia</item>
        <item>Standpipe</item>
        <item>Waterfalls</item>
        <item>Blue Castle Drive</item>
        <item>Aralia Drive</item>
        <item>Daisy Avenue</item>
        <item>Garden Boulevard</item>
        <item>Inter-Faculty Lecture Theatre</item>
        <item>Faculty of Social Sciences</item>
        <item>Aqueduct</item>
        <item>OSSD/Taylor Hall/Chancellor Hall</item>
        <item>Irvine Hall</item>
        <item>JTEC</item>
        <item>Rex Nettleford Hall</item>
        <item>Aston Preston Hall</item>
        <item>Students\' Union</item>
        <item>Leslie Robinson Hall</item>
        <item>Marlene Hamilton Hall</item>
        <item>Students\' Union</item>
        <item>Leslie Robinson Hall</item>
        <item>Rex Nettleford Hall</item>
        <item>Irvine Hall</item>
        <item>Mary Seacole Hall</item>
        <item>Old Dramatic Theatre</item>
        <item>Inter-Faculty Leature Theatre</item>
        <item>Social Sciences</item>
        <item>Aqueduct</item>
        <item>OSSD/Taylor Hall/Chancellor Hall</item>
        <item>Irvine Hall</item>
        <item>Golding Avenue</item>
        <item>Hospital</item>
        <item>Olympia Gallery</item>
        <item>Liguanea Post Office</item>
    </string-array>
    <string-array name="bus_route_a_times">
        <item>7:30</item>
        <item>7:33</item>
        <item>7:34</item>
        <item>7:36</item>
        <item>7:38</item>
        <item>7:39</item>
        <item>7:41</item>
        <item>7:42</item>
        <item>7:44</item>
        <item>7:46</item>
        <item>7:48</item>
        <item>7:50</item>
        <item>7:51</item>
        <item>7:51</item>
        <item>7:54</item>
        <item>7:55</item>
        <item>7:56</item>
        <item>7:56</item>
        <item>7:57</item>
        <item>7:58</item>
        <item>8:00</item>
        <item>8:01</item>
        <item>8:02</item>
        <item>8:02</item>
        <item>8:04</item>
        <item>8:05</item>
        <item>8:06</item>
        <item>8:07</item>
        <item>8:08</item>
        <item>8:09</item>
        <item>8:09</item>
        <item>8:11</item>
        <item>8:12</item>
        <item>8:13</item>
        <item>8:16</item>
        <item>8:30</item>
    </string-array>
    <string-array name="Imageshack_AlbumIDs" >
        <item>C5:</item>
    </string-array>
    <string-array name="bus_route_b_stops">
        <item>Liguanea Post Office</item>
        <item>Richings Avenue</item>
        <item>Sandy Park Lane</item>
        <item>Bank of Nova Scotia</item>
        <item>Standpipe</item>
        <item>Ravina</item>
        <item>JC Bottom Gate</item>
        <item>JC Top Gate</item>
        <item>Hope Garden</item>
        <item>UTech Gate</item>
        <item>Papine Market</item>
        <item>University Hospital</item>
        <item>Golding Circle</item>
        <item>St. Michael\'s Theological College</item>
        <item>Irvine Hall</item>
        <item>Mary Seacole Hall</item>
        <item>Old Dramatic Theatre</item>
        <item>Inter-Faculty Lecture Theatre</item>
        <item>Social Sciences</item>
        <item>Aqueduct</item>
        <item>OSSD/Taylor Hall/Chancellor Hall</item>
        <item>Irvine Hall</item>
        <item>JTEC</item>
        <item>Rex Nettleford Hall</item>
        <item>Aston Preston Hall</item>
        <item>Students\' Union</item>
        <item>Leslie Robinson Hall</item>
        <item>Marlene Hamilton Hall</item>

        <item>Students\' Union</item>
        <item>Leslie Robinson Hall</item>
        <item>Rex Nettleford Hall</item>
        <item>Irvine Hall</item>
        <item>Mary Seacole Hall</item>
        <item>Old Dramatic Theatre</item>
        <item>Inter-Faculty Leature Theatre</item>
        <item>Social Sciences</item>
        <item>Aqueduct</item>
        <item>OSSD/Taylor Hall/Chancellor Hall</item>
        <item>Irvine Hall</item>
        <item>Golding Avenue</item>
        <item>Hospital</item>
        <item>Olympia Gallery</item>
        <item>Liguanea Post Office</item>
    </string-array>
    <string name="location_on">GPS </string>
    <string name="location_off">GPS</string>
    <string name="destination_editText_hint">What room would you like to find?</string>
    <string name="starting_point_editText_hint">Starting point.</string>
</resources>