<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/sas">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/group_1">
                <item
                    android:id="@+id/sas_registration"
                    android:icon="@drawable/ic_event_black_24dp"
                    android:title="@string/sas_registration"/>
                <item
                    android:id="@+id/sas_transcript"
                    android:icon="@drawable/ic_receipt_black_24dp"
                    android:title="@string/sas_transcript"/>
                <item
                    android:id="@+id/sas_logout"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/sas_logout"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/group_2">
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings"/>
            </group>
        </menu>
    </item>
</menu>