<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/queens_way"
    tools:context="com.uwimonacs.fstmobile.activities.SASLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sas_login_mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context="com.uwimonacs.fstmobile.activities.SASLoginActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_title_sas"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idnum_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sas_username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:maxLength="9"
                android:hint="@string/username_sas"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sas_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:hint="@string/password_sas"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sas_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/login_button_sas"
            android:onClick="signin"
            android:enabled="false"/>

        <TextView
            android:id="@+id/login_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/sas_login_progressbar">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
