<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activities.mapActivity_MVP.MapActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2.74"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true">


    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


    <include
        layout="@layout/layout_bottomsheet"
        android:id="@+id/bottom_sheet"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <LinearLayout
        android:id="@+id/search_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-70dp"
            android:layout_weight="2.74"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/getSource"
                    style="@style/FullWidthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/search_text_view_background"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:drawableLeft="@drawable/ic_map_marker"
                    android:drawableStart="@drawable/ic_map_marker"
                    android:dropDownVerticalOffset="5dp"
                    android:dropDownWidth="wrap_content"
                    android:hint="@string/starting_point_editText_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete|textAutoCorrect"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/locationToggle"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:paddingTop="12dp"
                    android:animateLayoutChanges="true"
                    android:checked="false"
                    android:textColor="@color/Black"
                    android:textOff="@string/location_off"
                    android:textOn="@string/location_on"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/getSource"
                    android:layout_alignEnd="@+id/getSource" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/classSearch"
                    style="@style/FullWidthEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/search_text_view_background"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:drawableLeft="@drawable/ic_dest_marker"
                    android:hint="@string/destination_editText_hint"
                    android:imeOptions="actionDone"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/findBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="3dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/background_white"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_eye" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>





