<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:background="#FFC107"
                    app:srcCompat="@drawable/ic_help_outline_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/title_activity_faq" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:background="#2196F3"
                    app:srcCompat="@drawable/ic_videocam_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/title_activity_videos" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/scholarships"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:background="#FF5722"
                    app:srcCompat="@drawable/ic_school_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/title_activity_scholarship" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:background="#9E9E9E"
                    app:srcCompat="@drawable/ic_people_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/title_activity_contacts" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            android:transitionName="contact_card">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:background="#E91E63"
                    app:srcCompat="@drawable/ic_collections_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="Gallery" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
